// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/tasks/verify > logs error and exits when executable cannot be found 1`] = `
"[31mError: No version of Cypress is installed in: [36m/cache/Cypress/1.2.3/Cypress.app[39m[31m[39m
[31m[39m
[31mPlease reinstall Cypress by running: [36mcypress install[39m[31m[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mCypress executable not found at: [36m/cache/Cypress/1.2.3/Cypress.app/Contents/MacOS/Cypress[39m[31m[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > logs error and exits when no version of Cypress is installed 1`] = `
"[31mError: No version of Cypress is installed in: [36m/cache/Cypress/1.2.3/Cypress.app[39m[31m[39m
[31m[39m
[31mPlease reinstall Cypress by running: [36mcypress install[39m[31m[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mCypress executable not found at: [36m/cache/Cypress/1.2.3/Cypress.app/Contents/MacOS/Cypress[39m[31m[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > logs error when child process hangs 1`] = `
"It looks like this is your first time using Cypress: [36m1.2.3[39m

[31mError: Cypress verification timed out.[39m
[31m[39m
[31mThis command failed with the following output:[39m
[31m[39m
[31m/cache/Cypress/1.2.3/Cypress.app/Contents/MacOS/Cypress --no-sandbox --smoke-test --ping=222[39m
[31m[39m
[31m----------[39m
[31m[39m
[31msome stderr[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > logs error when child process returns incorrect stdout (stderr when exists) 1`] = `
"It looks like this is your first time using Cypress: [36m1.2.3[39m

[31mError: Cypress failed to start.[39m
[31m[39m
[31mThis may be due to a missing library or dependency. https://on.cypress.io/required-dependencies[39m
[31m[39m
[31mPlease refer to the error below for more details.[39m
[31m[39m
[31m----------[39m
[31m[39m
[31msome stderr[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > logs error when child process returns incorrect stdout (stdout when no stderr) 1`] = `
"It looks like this is your first time using Cypress: [36m1.2.3[39m

[31mError: Cypress failed to start.[39m
[31m[39m
[31mThis may be due to a missing library or dependency. https://on.cypress.io/required-dependencies[39m
[31m[39m
[31mPlease refer to the error below for more details.[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > logs warning when installed version does not match verified version 1`] = `
"Found binary version [32mbloop[39m installed in: [36m/cache/Cypress/1.2.3/Cypress.app[39m

[33m⚠ Warning: Binary version [32mbloop[39m[33m does not match the expected package version [32m1.2.3[39m[33m[39m
[33m[39m
[33m  These versions may not work properly together.[39m

"
`;

exports[`lib/tasks/verify > on linux > logs error and exits when starting xvfb fails > xvfb fails 1`] = `
"It looks like this is your first time using Cypress: [36m1.2.3[39m

[31mError: Xvfb exited with a non zero exit code.[39m
[31m[39m
[31mThere was a problem spawning Xvfb.[39m
[31m[39m
[31mThis is likely a problem with your system, permissions, or installation of Xvfb.[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mError: test without xvfb[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > smoke test retries on bad display with our Xvfb > fails on both retries with our Xvfb on Linux > tried to verify twice, on the first try got the DISPLAY error 1`] = `
"Cypress verification failed.

Cypress failed to start after spawning a new Xvfb server.

The error logs we received were:

----------

[some noise here] Gtk: cannot open display: 987
some other error
again with
some weird indent

----------

This may be due to a missing library or dependency. [34mhttps://on.cypress.io/required-dependencies[39m

Please refer to the error above for more detail.

----------

Platform: linux-x64 (undefined)
Cypress Version: 1.2.3"
`;

exports[`lib/tasks/verify > smoke test retries on bad display with our Xvfb > is silent when logLevel is silent > silent verify 1`] = `""`;

exports[`lib/tasks/verify > smoke test retries on bad display with our Xvfb > logs an error if Cypress executable does not exist > no Cypress executable 1`] = `
"[31mError: No version of Cypress is installed in: [36m/cache/Cypress/1.2.3/Cypress.app[39m[31m[39m
[31m[39m
[31mPlease reinstall Cypress by running: [36mcypress install[39m[31m[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mCypress executable not found at: [36m/cache/Cypress/1.2.3/Cypress.app/Contents/MacOS/Cypress[39m[31m[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > smoke test retries on bad display with our Xvfb > logs an error if Cypress executable does not have permissions > Cypress non-executable permission 1`] = `
"[31mError: Cypress cannot run because this binary file does not have executable permissions here:[39m
[31m[39m
[31m/cache/Cypress/1.2.3/Cypress.app/Contents/MacOS/Cypress[39m
[31m[39m
[31mReasons this may happen:[39m
[31m[39m
[31m- node was installed as 'root' or with 'sudo'[39m
[31m- the cypress npm package as 'root' or with 'sudo'[39m
[31m[39m
[31mPlease check that you have the appropriate user permissions.[39m
[31m[39m
[31mYou can also try clearing the cache with 'cypress cache clear' and reinstalling.[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > smoke test retries on bad display with our Xvfb > logs and runs when current version has not been verified > current version has not been verified 1`] = `
"It looks like this is your first time using Cypress: [36m1.2.3[39m


Opening Cypress...
"
`;

exports[`lib/tasks/verify > smoke test retries on bad display with our Xvfb > logs and runs when installed version is different than package version > different version installed 1`] = `
"Found binary version [32m7.8.9[39m installed in: [36m/cache/Cypress/1.2.3/Cypress.app[39m

[33m⚠ Warning: Binary version [32m7.8.9[39m[33m does not match the expected package version [32m1.2.3[39m[33m[39m
[33m[39m
[33m  These versions may not work properly together.[39m

It looks like this is your first time using Cypress: [36m7.8.9[39m


Opening Cypress...
"
`;

exports[`lib/tasks/verify > smoke test retries on bad display with our Xvfb > logs error when fails smoke test unexpectedly without stderr > fails with no stderr 1`] = `
"It looks like this is your first time using Cypress: [36m1.2.3[39m

[31mError: Cypress failed to start.[39m
[31m[39m
[31mThis may be due to a missing library or dependency. https://on.cypress.io/required-dependencies[39m
[31m[39m
[31mPlease refer to the error below for more details.[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mError: EPERM NOT PERMITTED[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > smoke test retries on bad display with our Xvfb > turns off Opening Cypress... > no welcome message 1`] = `
"Found binary version [32m7.8.9[39m installed in: [36m/cache/Cypress/1.2.3/Cypress.app[39m

[33m⚠ Warning: Binary version [32m7.8.9[39m[33m does not match the expected package version [32m1.2.3[39m[33m[39m
[33m[39m
[33m  These versions may not work properly together.[39m

"
`;

exports[`lib/tasks/verify > smoke test with DEBUG output > finds ping value in the verbose output > verbose stdout output 1`] = `
"It looks like this is your first time using Cypress: [36m1.2.3[39m


Opening Cypress...
"
`;

exports[`lib/tasks/verify > when env var CYPRESS_RUN_BINARY > can log error to user on darwin > darwin: error when invalid CYPRESS_RUN_BINARY 1`] = `
"[33mNote:[39m You have set the environment variable:

[37mCYPRESS_RUN_BINARY=[39m[36m/custom/[39m

This overrides the default Cypress binary path used.

[31mError: Could not run binary set by environment variable: CYPRESS_RUN_BINARY=/custom/[39m
[31m[39m
[31mEnsure the environment variable is a path to the Cypress binary, matching **/Contents/MacOS/Cypress[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mENOENT: no such file or directory, stat '/custom/'[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > when env var CYPRESS_RUN_BINARY > can log error to user on linux > linux: error when invalid CYPRESS_RUN_BINARY 1`] = `
"[33mNote:[39m You have set the environment variable:

[37mCYPRESS_RUN_BINARY=[39m[36m/custom/[39m

This overrides the default Cypress binary path used.

[31mError: Could not run binary set by environment variable: CYPRESS_RUN_BINARY=/custom/[39m
[31m[39m
[31mEnsure the environment variable is a path to the Cypress binary, matching **/Cypress[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mENOENT: no such file or directory, stat '/custom/'[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: linux-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > when env var CYPRESS_RUN_BINARY > can log error to user on win32 > win32: error when invalid CYPRESS_RUN_BINARY 1`] = `
"[33mNote:[39m You have set the environment variable:

[37mCYPRESS_RUN_BINARY=[39m[36m/custom/[39m

This overrides the default Cypress binary path used.

[31mError: Could not run binary set by environment variable: CYPRESS_RUN_BINARY=/custom/[39m
[31m[39m
[31mEnsure the environment variable is a path to the Cypress binary, matching **/Cypress.exe[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mENOENT: no such file or directory, stat '/custom/'[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: win32-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > when env var CYPRESS_RUN_BINARY > can validate and use executable > valid CYPRESS_RUN_BINARY 1`] = `
"[33mNote:[39m You have set the environment variable:

[37mCYPRESS_RUN_BINARY=[39m[36m/custom/Contents/MacOS/Cypress[39m

This overrides the default Cypress binary path used.

It looks like this is your first time using Cypress: [36m1.2.3[39m


Opening Cypress...
"
`;

exports[`lib/tasks/verify > when running in CI > logs error when binary not found > error binary not found in ci 1`] = `
"[31mError: The cypress npm package is installed, but the Cypress binary is missing.[39m
[31m[39m
[31mWe expected the binary to be installed here: [36m/cache/Cypress/1.2.3/Cypress.app/Contents/MacOS/Cypress[39m[31m[39m
[31m[39m
[31mReasons it may be missing:[39m
[31m[39m
[31m- You're caching 'node_modules' but are not caching this path: /cache/Cypress[39m
[31m- You ran 'npm install' at an earlier build step but did not persist: /cache/Cypress[39m
[31m[39m
[31mProperly caching the binary will fix this error and avoid downloading and unzipping Cypress.[39m
[31m[39m
[31mAlternatively, you can run 'cypress install' to download the binary again.[39m
[31m[39m
[31m[34mhttps://on.cypress.io/not-installed-ci-error[39m[31m[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > when running in CI > uses verbose renderer > verifying in ci 1`] = `
"It looks like this is your first time using Cypress: [36m1.2.3[39m


Opening Cypress...
"
`;

exports[`lib/tasks/verify > with force: true > clears verified version from state if verification fails > fails verifying Cypress 1`] = `
"
[31mError: Cypress failed to start.[39m
[31m[39m
[31mThis may be due to a missing library or dependency. https://on.cypress.io/required-dependencies[39m
[31m[39m
[31mPlease refer to the error below for more details.[39m
[31m[39m
[31m----------[39m
[31m[39m
[31man error about dependencies[39m
[31m[39m
[31m----------[39m
[31m[39m
[31mPlatform: darwin-x64 (undefined)[39m
[31mCypress Version: 1.2.3[39m
"
`;

exports[`lib/tasks/verify > with force: true > shows full path to executable when verifying > verification with executable 1`] = `
"

Opening Cypress...
"
`;
